--- a/1_2.md
+++ b/1_2.md
@@ -3,7 +3,10 @@ Bekerja dengan GIthub
 
 
 A. Membuat repository baru
-![Repo baru](1_2_1.png "Title")
+
+![error](1_2_1.png "Gambar repo baru")
+
+
 Untuk membuat repository github click di kanan atas di website github.com new repository
 Nama repo tidak boleh ada spasi
 
