--- a/1_2.md
+++ b/1_2.md
@@ -4,8 +4,6 @@ Bekerja dengan GIthub
 
 A. Membuat repository baru
 
-![error](1_2_1.png "Gambar repo baru")
-
 
 Untuk membuat repository github click di kanan atas di website github.com new repository
 Nama repo tidak boleh ada spasi
@@ -16,14 +14,12 @@ Jika checklist initialize this repository with a readme, akan dibuat readme seca
 
 B. Membuat file baru
 File bisa dibuat secara manual melalui github.
-(gambar file baru)
 File yang telah dibuat secara manual, dicommit untuk distor di dalam github.
-(gambar commit)
 Jangan lupa untuk menambahkan pesan commit dan deskripsinya.
 
 Selain membuat file, file bisa diedit langsung pada github.
 
 Walaupun beberapa commit, filenya tetap satu.
 
-Perubahan pada setiap commit dapat dilihat dibagian history.
-(gambar history)
+Perubahan pada setiap commit dapat dilihat dibagian history dan insights untuk melihat visualisasi commit.
+
