--- a/1_2.md
+++ b/1_2.md
@@ -1,8 +1,7 @@
+# Bekerja dengan Github
 
-Bekerja dengan GIthub
 
-
-A. Membuat repository baru
+### A. Membuat repository baru
 
 
 Untuk membuat repository github click di kanan atas di website github.com new repository
@@ -12,7 +11,7 @@ Repo dapat dipublic supaya bisa dilihat orang lain atau private untuk merahasiak
 
 Jika checklist initialize this repository with a readme, akan dibuat readme secara otomatis.
 
-B. Membuat file baru
+### B. Membuat file baru
 File bisa dibuat secara manual melalui github.
 File yang telah dibuat secara manual, dicommit untuk distor di dalam github.
 Jangan lupa untuk menambahkan pesan commit dan deskripsinya.
