--- a/1_2.md
+++ b/1_2.md
@@ -1,24 +1,10 @@
 # Bekerja dengan Github
 
 
-### A. Membuat repository baru
-
-
-Untuk membuat repository github click di kanan atas di website github.com new repository
-Nama repo tidak boleh ada spasi
-
-Repo dapat dipublic supaya bisa dilihat orang lain atau private untuk merahasiakan repo.
-
-Jika checklist initialize this repository with a readme, akan dibuat readme secara otomatis.
+## A. Membuat repository baru
+    Untuk membuat repository github click di kanan atas di website github.com new repository. Pastikan nama repo tidak ada spasi. Sebuah repo dapat dipublic supaya bisa dilihat orang lain atau private untuk merahasiakan repo dari orang luar. Jika checklist initialize this repository with a readme, akan dibuat readme secara otomatis.
 
 ### B. Membuat file baru
-File bisa dibuat secara manual melalui github.
-File yang telah dibuat secara manual, dicommit untuk distor di dalam github.
-Jangan lupa untuk menambahkan pesan commit dan deskripsinya.
-
-Selain membuat file, file bisa diedit langsung pada github.
-
-Walaupun beberapa commit, filenya tetap satu.
-
-Perubahan pada setiap commit dapat dilihat dibagian history dan insights untuk melihat visualisasi commit.
+    File bisa dibuat secara manual melalui github. File yang telah dibuat secara manual, dicommit untuk distor di dalam github. Jangan lupa untuk menambahkan pesan commit dan deskripsinya.
+    Selain membuat file, file bisa diedit langsung pada github.Walaupun beberapa commit, filenya tetap satu. Perubahan pada setiap commit dapat dilihat dibagian history dan insights untuk melihat visualisasi commit.
 
