--- a/1_5.md
+++ b/1_5.md
@@ -43,9 +43,9 @@ Untuk menyimpan perubahan ke dalam history, gunakan git commit.
 3. Sebelum commit, git meminta identitas orang yang mengcommit. 
 4. Gunakan perintah git commit -m "Pesan commit" untuk mengcommit file tersebut
 
-Untuk memeriksa perubahan sebuah file dalam sebuah repo, gunakan command git log -- <filename>
+Untuk memeriksa perubahan sebuah file dalam sebuah repo, gunakan command git log -- \<filename\>
 ### Checkout
-1. Untuk mengembalikan perubahan pada suatu file, gunakan git checkout <commit hash> -- <filename>. File akan disimpan di staging area
+1. Untuk mengembalikan perubahan pada suatu file, gunakan git checkout \<commit hash\> -- \<filename\>. File akan disimpan di staging area
 2. Lakukan commit untuk menyimpan perubahannya
 
 
