--- a/1_6.md
+++ b/1_6.md
@@ -28,3 +28,5 @@ i. Setelah merge gunakan command git branch -d <branchName>. Jika belum dimerge 
 
 ## D. Screenshot
 ![Error image 5](test_5.png "Test 5")
+![Error image 6](test_6.png "Test 6")
+![Error image 7](test_7.png "Test 7")
