--- a/1_6.md
+++ b/1_6.md
@@ -6,12 +6,12 @@ Head adalah pointer yang menunjuk branch yang aktif pada sebuah commit.
 ## A. Implementasi branch
 #### a. Command: 
 git branch: Menampilkan semua branch.
-git branch <branchname>: Membuat sebuah branch.
-git checkout <branchName>: Pada commit yang sama pointer head akan menunjuk branchName.
-git branch -d <branchName>: Menghapus branch yang tidak digunakan.
+git branch \<branchname\>: Membuat sebuah branch.
+git checkout \<branchName\>: Pada commit yang sama pointer head akan menunjuk branchName.
+git branch -d \<branchName\>: Menghapus branch yang tidak digunakan.
 #### b. Pembuatan branch baru
-1. Gunakan command git branch <branchname> untuk membuat branch.
-2. Gunakan command git checkout <branchName> untuk membuat head menunjuk branchName.
+1. Gunakan command git branch \<branchname\> untuk membuat branch.
+2. Gunakan command git checkout \<branchName\> untuk membuat head menunjuk branchName.
 3. Lakukan commit untuk membuat cabang.
 
 ## B. Implementasi merge
@@ -22,9 +22,9 @@ Commandnya sama, hanya saja path commitnya akan berbeda.
 
 ## C. Merging
 i. Ubah head untuk menunjuk branch utama yang akan di merge
-ii. Gunakan command git merge <otherBranch>
+ii. Gunakan command git merge \<otherBranch\>
 #### a.Menghapus branch
-i. Setelah merge gunakan command git branch -d <branchName>. Jika belum dimerge gunakan command git branch -D <branchName> untuk menghapus secara paksa.
+i. Setelah merge gunakan command git branch -d \<branchName\>. Jika belum dimerge gunakan command git branch -D \<branchName\> untuk menghapus secara paksa.
 
 ## D. Screenshot
 ![Error image 5](test_5.png "Test 5")
